fix spacing in nav bar

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ li{
     font-size: 16px;
     text-transform: capitalize;
     display: inline-block;
-    width: 80px;
+    letter-spacing: 2px;
 }
 
 
